--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.2",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
