--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^2.9.11",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "firebase": "^9.17.1",
     "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebaseui": "^6.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.2",
     "react-i18next": "^12.2.0",
